<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/main_open_lifecycle"
        android:text="@string/label_open_lifecycle_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/main_open_intents"
        android:text="@string/label_open_intents_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/main_open_layouts"
        android:text="@string/label_open_layouts_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/main_open_calculator"
        android:text="@string/label_open_calculator_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/main_open_services"
        android:text="@string/label_open_services_example"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/main_open_asynctask"
        android:text="AsyncTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/main_open_loaders"
        android:text="Loaders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>